Remove error distribution by race grid and primary vs secondary by class figures

--- a/tables_and_figures/output/primary_secondary_delta.tex
+++ b/tables_and_figures/output/primary_secondary_delta.tex
@@ -5,38 +5,17 @@
 \label{tab:primary_secondary_delta}
 \begin{threeparttable}
 \begin{tabular}{lccccccccc}
-\midrule
-\midrule
+\toprule
 Variable Class & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 \\
 \midrule
 Demographic & - & +0.4 & +0.5 & +3.2 & +4.0 & +3.9 & +3.8 & +3.5 & +2.8 \\
-Voting Administration & - & +4.9 & -8.9 & -12.1 & -15.0 & -18.4 & -16.4 & -33.9 & +4.2 \\
 Candidate Choice & - & - & - & - & +5.7 & +2.7 & +2.3 & +1.7 & +3.4 \\
-\midrule
-Age Group & - & - & - & - & - & - & - & - & - \\
-Attorney General & - & - & - & - & - & - & - & - & - \\
-Education & - & - & - & - & - & - & - & - & - \\
-Employment Status & - & - & - & - & - & - & - & - & - \\
-Family Income & - & - & - & - & - & - & - & - & - \\
-Governor & - & - & - & - & - & - & - & - & - \\
-Hispanic Origin & - & - & - & - & - & - & - & - & - \\
-President & - & - & - & - & - & - & - & - & - \\
-Residence Duration & - & - & - & - & - & - & - & - & - \\
-Secretary of State & - & - & - & - & - & - & - & - & - \\
-Sex & - & - & - & - & - & - & - & - & - \\
-State Representative & - & - & - & - & - & - & - & - & - \\
-State Senator & - & - & - & - & - & - & - & - & - \\
-State of Residence & - & - & - & - & - & - & - & - & - \\
-U.S. House & - & - & - & - & - & - & - & - & - \\
-U.S. Senate & - & - & - & - & - & - & - & - & - \\
-Union Membership & - & - & - & - & - & - & - & - & - \\
-Veteran Status & - & - & - & - & - & - & - & - & - \\
-Voting Method & - & - & - & - & - & - & - & - & - \\
-\midrule
+\textbf{Overall} & - & +0.8 & +1.7 & +4.3 & +4.5 & +3.4 & +3.2 & +2.8 & +3.3 \\
+\bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} Delta = Secondary RMSE - Primary RMSE (variable-level averaging). Positive values indicate Secondary variables have higher error than Primary variables. Top section shows deltas by variable class; bottom section shows deltas by individual variable (excluding Voter Registration and Voting Turnout). Dash indicates insufficient data for that year.
+\item \textit{Note:} Delta = Secondary RMSE - Primary RMSE (excluding Voter Turnout and Registration). Positive values indicate Secondary variables have higher error.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
