--- a/tables_and_figures/output/rmse_ces_weighted_all.tex
+++ b/tables_and_figures/output/rmse_ces_weighted_all.tex
@@ -46,7 +46,7 @@ Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Yearly
 {\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.0}} \\
 \midrule
 \textbf{Yearly RMSE} & \textbf{11.1} & \textbf{9.2} & \textbf{9.6} & \textbf{9.8} & \textbf{9.5} & \textbf{8.5} & \textbf{8.7} & \textbf{8.4} & \textbf{9.1} & \textbf{9.3} \\
-\midrule
+\bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
