--- a/tables_and_figures/output/rmse_ces_weighted_by_type.tex
+++ b/tables_and_figures/output/rmse_ces_weighted_by_type.tex
@@ -75,7 +75,7 @@ Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Yearly
 {\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{9.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.5}} \\
 \midrule
 \textbf{Yearly RMSE} & \textbf{11.1} & \textbf{9.0} & \textbf{9.0} & \textbf{9.4} & \textbf{10.2} & \textbf{8.6} & \textbf{9.0} & \textbf{7.6} & \textbf{10.6} & \textbf{9.4} \\
-\midrule
+\bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
