--- a/tables_and_figures/output/rmse_unweighted.tex
+++ b/tables_and_figures/output/rmse_unweighted.tex
@@ -46,7 +46,7 @@ Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Yearly
 {\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{11.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{12.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.9}} \\
 \midrule
 \textbf{Yearly RMSE} & \textbf{11.1} & \textbf{9.7} & \textbf{11.5} & \textbf{11.1} & \textbf{10.0} & \textbf{10.2} & \textbf{10.4} & \textbf{11.5} & \textbf{11.6} & \textbf{10.8} \\
-\midrule
+\bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
