Filter error distribution by class to show secondary variables only

--- a/tables_and_figures/figuresHQ.ipynb
+++ b/tables_and_figures/figuresHQ.ipynb
@@ -639,46 +639,47 @@
     }
    ],
    "source": [
-    "# Filter for Matching + Post-Stratification\n",
-    "df_hist = most_specific[\n",
-    "    (most_specific['Weighting_Method'] == 'CES-Provided Weights') &\n",
-    "    (most_specific['Validity_Scheme'] == 'All')\n",
-    "].copy()\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "\n",
-    "# Define improved color palette with better contrast\n",
-    "colors_hist = {\n",
-    "    'Demographic': '#3366BB',           # Darker, more saturated blue\n",
-    "    'Voting Administration': '#DD3333',  # Brighter, more saturated red\n",
-    "    'Candidate Choice': '#33AA55'        # Brighter, more saturated green\n",
-    "}\n",
-    "\n",
-    "# Alpha values for layering: back to front\n",
-    "alpha_order = {\n",
-    "    'Candidate Choice': 0.4,      # Back (lowest alpha, most transparent)\n",
-    "    'Demographic': 0.55,          # Middle\n",
-    "    'Voting Administration': 0.75  # Front (highest alpha, most opaque)\n",
-    "}\n",
-    "\n",
-    "# Plot order: back to front for better visibility\n",
-    "plot_order = ['Candidate Choice', 'Demographic', 'Voting Administration']\n",
-    "\n",
-    "for cls in plot_order:\n",
-    "    cls_data = df_hist[df_hist['Class'] == cls]['Error'].abs()\n",
-    "    ax.hist(cls_data, bins=50, alpha=alpha_order[cls], label=cls,\n",
-    "               weights=np.ones_like(cls_data)/len(cls_data), \n",
-    "            color=colors_hist[cls], edgecolor='black', linewidth=0.5)\n",
-    "\n",
-    "ax.set_xlabel('Absolute Error (%)', fontsize=14)\n",
-    "ax.set_ylabel('Share of Errors', fontsize=14)\n",
-    "ax.set_title('Distribution of Absolute Errors by Variable Class', fontsize=16, fontweight='bold')\n",
-    "ax.legend(fontsize=12, frameon=True, fancybox=False, edgecolor='black')\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
-    "ax.grid(axis='y', linestyle='-', alpha=0.3)\n",
-    "\n",
-    "save_figure(fig, 'error_distribution_by_class.png')\n",
+    "# Filter for Matching + Post-Stratification, Secondary Variables Only",
+    "df_hist = most_specific[",
+    "    (most_specific['Weighting_Method'] == 'CES-Provided Weights') &",
+    "    (most_specific['Validity_Scheme'] == 'All') &",
+    "    (most_specific['Primary_Variable'] == False)",
+    "].copy()",
+    "",
+    "fig, ax = plt.subplots(figsize=(10, 6))",
+    "",
+    "# Define improved color palette with better contrast",
+    "colors_hist = {",
+    "    'Demographic': '#3366BB',           # Darker, more saturated blue",
+    "    'Voting Administration': '#DD3333',  # Brighter, more saturated red",
+    "    'Candidate Choice': '#33AA55'        # Brighter, more saturated green",
+    "}",
+    "",
+    "# Alpha values for layering: back to front",
+    "alpha_order = {",
+    "    'Candidate Choice': 0.4,      # Back (lowest alpha, most transparent)",
+    "    'Demographic': 0.55,          # Middle",
+    "    'Voting Administration': 0.75  # Front (highest alpha, most opaque)",
+    "}",
+    "",
+    "# Plot order: back to front for better visibility",
+    "plot_order = ['Candidate Choice', 'Demographic', 'Voting Administration']",
+    "",
+    "for cls in plot_order:",
+    "    cls_data = df_hist[df_hist['Class'] == cls]['Error'].abs()",
+    "    ax.hist(cls_data, bins=50, alpha=alpha_order[cls], label=cls,",
+    "               weights=np.ones_like(cls_data)/len(cls_data), ",
+    "            color=colors_hist[cls], edgecolor='black', linewidth=0.5)",
+    "",
+    "ax.set_xlabel('Absolute Error (%)', fontsize=14)",
+    "ax.set_ylabel('Share of Errors', fontsize=14)",
+    "ax.set_title('Distribution of Absolute Errors by Variable Class (Secondary Variables)', fontsize=16, fontweight='bold')",
+    "ax.legend(fontsize=12, frameon=True, fancybox=False, edgecolor='black')",
+    "ax.spines['top'].set_visible(False)",
+    "ax.spines['right'].set_visible(False)",
+    "ax.grid(axis='y', linestyle='-', alpha=0.3)",
+    "",
+    "save_figure(fig, 'error_distribution_by_class.png')",
     "plt.show()"
    ]
   },
