Add multilevel model for RMSE trends over time with random year intercepts

--- a/tables_and_figures/figuresHQ.ipynb
+++ b/tables_and_figures/figuresHQ.ipynb
@@ -1094,6 +1094,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================",
+    "# MULTILEVEL MODEL: RMSE TRENDS OVER TIME",
+    "# =============================================================================",
+    "# Model: Error_iy = \u03b1 + \u03b2\u00b7Year_y + u_y + \u03b5_iy",
+    "# Where u_y = year-level random effect, \u03b5_iy = individual noise",
+    "",
+    "import statsmodels.formula.api as smf",
+    "",
+    "# Filter for Matching + Post-Stratification, All validity scheme",
+    "df_mlm = most_specific[",
+    "    (most_specific['Weighting_Method'] == 'CES-Provided Weights') &",
+    "    (most_specific['Validity_Scheme'] == 'All')",
+    "].copy()",
+    "",
+    "# Use absolute error for RMSE-style analysis",
+    "df_mlm['AbsError'] = df_mlm['Error'].abs()",
+    "",
+    "# Center year for interpretability (intercept = mean at center year)",
+    "center_year = df_mlm['Year'].median()",
+    "df_mlm['Year_centered'] = df_mlm['Year'] - center_year",
+    "",
+    "# Fit multilevel model with random intercepts for year",
+    "model = smf.mixedlm(\"AbsError ~ Year_centered\", df_mlm, groups=df_mlm[\"Year\"])",
+    "result = model.fit(method='lbfgs')",
+    "",
+    "print(\"=\" * 80)",
+    "print(\"MULTILEVEL MODEL: Absolute Error Trends Over Time\")",
+    "print(\"Model: AbsError ~ Year + (1|Year)\")",
+    "print(\"=\" * 80)",
+    "print()",
+    "print(result.summary())",
+    "print()",
+    "",
+    "# Extract key statistics",
+    "beta = result.fe_params['Year_centered']",
+    "beta_se = result.bse_fe['Year_centered']",
+    "beta_pval = result.pvalues['Year_centered']",
+    "intercept = result.fe_params['Intercept']",
+    "intercept_se = result.bse_fe['Intercept']",
+    "intercept_pval = result.pvalues['Intercept']",
+    "",
+    "# Variance components",
+    "var_year = result.cov_re.iloc[0, 0]  # Between-year variance (random effect)",
+    "var_resid = result.scale  # Within-year variance (residual)",
+    "icc = var_year / (var_year + var_resid)  # Intraclass correlation",
+    "",
+    "print(\"=\" * 80)",
+    "print(\"KEY RESULTS\")",
+    "print(\"=\" * 80)",
+    "print(f\"Fixed Effects:\")",
+    "print(f\"  Intercept (at year {int(center_year)}): {intercept:.3f}%\")",
+    "print(f\"  Year slope (\u03b2): {beta:.4f}% per year\")",
+    "print(f\"  Year slope SE: {beta_se:.4f}\")",
+    "print(f\"  Year slope p-value: {beta_pval:.6f} {'***' if beta_pval < 0.001 else '**' if beta_pval < 0.01 else '*' if beta_pval < 0.05 else ''}\")",
+    "print()",
+    "print(f\"Variance Components:\")",
+    "print(f\"  Between-year variance (\u03c3\u00b2_u): {var_year:.4f}\")",
+    "print(f\"  Within-year variance (\u03c3\u00b2_\u03b5): {var_resid:.4f}\")",
+    "print(f\"  Intraclass Correlation (ICC): {icc:.4f} ({icc*100:.1f}%)\")",
+    "print()",
+    "print(f\"Interpretation:\")",
+    "print(f\"  - {icc*100:.1f}% of variance in errors is attributable to year-level differences\")",
+    "print(f\"  - Controlling for year clustering, errors {'increase' if beta > 0 else 'decrease'} by {abs(beta):.3f}% per year\")",
+    "",
+    "# Calculate year-level predictions",
+    "years = sorted(df_mlm['Year'].unique())",
+    "year_means = df_mlm.groupby('Year')['AbsError'].mean()",
+    "",
+    "# Get random effects (BLUPs)",
+    "random_effects = result.random_effects",
+    "",
+    "# Create visualization",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 6))",
+    "",
+    "# Left plot: Year means with trend line",
+    "ax1 = axes[0]",
+    "",
+    "# Plot observed year means",
+    "ax1.scatter(years, [year_means[y] for y in years], s=100, color='#3366BB', ",
+    "            edgecolor='black', linewidth=1.5, zorder=5, label='Observed Year Mean')",
+    "",
+    "# Plot fixed effect trend line",
+    "year_range = np.array([min(years), max(years)])",
+    "year_range_centered = year_range - center_year",
+    "trend_line = intercept + beta * year_range_centered",
+    "ax1.plot(year_range, trend_line, '--', color='#DD3333', linewidth=2.5, ",
+    "         label=f'Fixed Effect Trend (\u03b2={beta:.3f}/yr, p={beta_pval:.4f})')",
+    "",
+    "# Plot model predictions (fixed + random) for each year",
+    "predictions = []",
+    "for y in years:",
+    "    y_centered = y - center_year",
+    "    pred = intercept + beta * y_centered + random_effects[y]['Group']",
+    "    predictions.append(pred)",
+    "",
+    "ax1.plot(years, predictions, 'o-', color='#33AA55', markersize=8, ",
+    "         linewidth=2, alpha=0.7, label='Model Prediction (Fixed + Random)')",
+    "",
+    "ax1.set_xlabel('Year', fontsize=12)",
+    "ax1.set_ylabel('Mean Absolute Error (%)', fontsize=12)",
+    "ax1.set_title('Multilevel Model: Error Trends Over Time\\n(Random Intercepts by Year)', fontsize=14, fontweight='bold')",
+    "ax1.legend(loc='upper left', fontsize=10, frameon=True, fancybox=False, edgecolor='black')",
+    "ax1.set_xticks(years)",
+    "ax1.set_xticklabels([str(y) for y in years], rotation=45)",
+    "ax1.spines['top'].set_visible(False)",
+    "ax1.spines['right'].set_visible(False)",
+    "ax1.grid(axis='y', linestyle='-', alpha=0.3)",
+    "",
+    "# Right plot: Random effects by year",
+    "ax2 = axes[1]",
+    "",
+    "re_values = [random_effects[y]['Group'] for y in years]",
+    "colors = ['#DD3333' if re < 0 else '#3366BB' for re in re_values]",
+    "",
+    "bars = ax2.bar(range(len(years)), re_values, color=colors, edgecolor='black', linewidth=0.8)",
+    "ax2.axhline(y=0, color='black', linestyle='-', linewidth=1)",
+    "",
+    "ax2.set_xlabel('Year', fontsize=12)",
+    "ax2.set_ylabel('Random Effect (u_y)', fontsize=12)",
+    "ax2.set_title('Year-Level Random Effects\\n(Deviation from Fixed Trend)', fontsize=14, fontweight='bold')",
+    "ax2.set_xticks(range(len(years)))",
+    "ax2.set_xticklabels([str(y) for y in years], rotation=45)",
+    "ax2.spines['top'].set_visible(False)",
+    "ax2.spines['right'].set_visible(False)",
+    "ax2.grid(axis='y', linestyle='-', alpha=0.3)",
+    "",
+    "# Add value labels on bars",
+    "for i, (bar, val) in enumerate(zip(bars, re_values)):",
+    "    va = 'bottom' if val >= 0 else 'top'",
+    "    offset = 0.1 if val >= 0 else -0.1",
+    "    ax2.annotate(f'{val:.2f}', xy=(bar.get_x() + bar.get_width()/2, val + offset),",
+    "                ha='center', va=va, fontsize=9)",
+    "",
+    "plt.tight_layout()",
+    "save_figure(fig, 'rmse_multilevel_trend.png')",
+    "plt.show()",
+    "",
+    "# Save LaTeX table (manually constructed to avoid escaping issues)",
+    "latex_content = f'''\\\\begin{{table}}[!htbp]",
+    "\\\\centering",
+    "\\\\footnotesize",
+    "\\\\caption{{Multilevel Model: Error Trends Over Time}}",
+    "\\\\label{{tab:rmse_multilevel_trend}}",
+    "\\\\begin{{threeparttable}}",
+    "\\\\begin{{tabular}}{{lccc}}",
+    "\\\\toprule",
+    "Parameter & Estimate & SE & p-value \\\\\\\\",
+    "\\\\midrule",
+    "\\\\multicolumn{{4}}{{l}}{{\\\\textit{{Fixed Effects}}}} \\\\\\\\",
+    "\\\\quad Intercept (at 2014) & {intercept:.3f} & {intercept_se:.3f} & {'<0.001*' if intercept_pval < 0.001 else f'{intercept_pval:.3f}*' if intercept_pval < 0.05 else f'{intercept_pval:.3f}'} \\\\\\\\",
+    "\\\\quad Year ($\\\\beta$) & {beta:.4f} & {beta_se:.4f} & {'<0.001*' if beta_pval < 0.001 else f'{beta_pval:.3f}*' if beta_pval < 0.05 else f'{beta_pval:.3f}'} \\\\\\\\",
+    "\\\\midrule",
+    "\\\\multicolumn{{4}}{{l}}{{\\\\textit{{Variance Components}}}} \\\\\\\\",
+    "\\\\quad Between-year ($\\\\sigma^2_u$) & {var_year:.4f} & - & - \\\\\\\\",
+    "\\\\quad Within-year ($\\\\sigma^2_\\\\varepsilon$) & {var_resid:.2f} & - & - \\\\\\\\",
+    "\\\\quad ICC & {icc:.4f} & - & - \\\\\\\\",
+    "\\\\bottomrule",
+    "\\\\end{{tabular}}",
+    "\\\\begin{{tablenotes}}",
+    "\\\\footnotesize",
+    "\\\\item \\\\textit{{Note:}} Multilevel model with random intercepts by year. N = {len(df_mlm):,} observations across 9 years.",
+    "\\\\item * indicates p < 0.05",
+    "\\\\end{{tablenotes}}",
+    "\\\\end{{threeparttable}}",
+    "\\\\end{{table}}'''",
+    "",
+    "# Write with proper single backslashes",
+    "with open('output/rmse_multilevel_trend.tex', 'w') as f:",
+    "    f.write(latex_content.replace('\\\\\\\\\\\\\\\\', '\\\\\\\\').replace('\\\\\\\\', '\\\\'))",
+    "",
+    "print(\"\\nSaved: output/rmse_multilevel_trend.tex\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "execution": {
