Improve multilevel model with proper unit clustering and variable FE

--- a/tables_and_figures/figuresHQ.ipynb
+++ b/tables_and_figures/figuresHQ.ipynb
@@ -398,6 +398,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# OBSERVATION COUNTS TABLE BY VARIABLE AND YEAR\n",
+    "# Similar structure to rmse_ces_weighted_all but with counts\n",
+    "# ============================================================\n",
+    "\n",
+    "# Filter for CES-Weighted, All validity, Secondary only\n",
+    "df_counts = most_specific[\n",
+    "    (most_specific['Weighting_Method'] == 'CES-Provided Weights') &\n",
+    "    (most_specific['Validity_Scheme'] == 'All') &\n",
+    "    (most_specific['Variable_Type'] == 'Secondary')\n",
+    "].copy()\n",
+    "\n",
+    "years_count = sorted(df_counts['Year'].unique())\n",
+    "\n",
+    "# Count observations per variable per year\n",
+    "count_pivot = df_counts.groupby(['Variable', 'Year']).size().unstack(fill_value=0)\n",
+    "\n",
+    "# Add Sum column\n",
+    "count_pivot['Sum'] = count_pivot.sum(axis=1)\n",
+    "\n",
+    "# Calculate totals per year\n",
+    "year_totals = count_pivot[years_count].sum(axis=0)\n",
+    "grand_total = count_pivot['Sum'].sum()\n",
+    "\n",
+    "# Variable to class mapping\n",
+    "class_map_counts = df_counts.groupby('Variable')['Class'].first().to_dict()\n",
+    "\n",
+    "# Define variable order by class\n",
+    "class_order_counts = ['Demographic', 'Voting Administration', 'Candidate Choice']\n",
+    "\n",
+    "# Sort variables by class\n",
+    "var_by_class = {cls: [] for cls in class_order_counts}\n",
+    "for var in count_pivot.index:\n",
+    "    cls = class_map_counts.get(var, 'Unknown')\n",
+    "    if cls in var_by_class:\n",
+    "        var_by_class[cls].append(var)\n",
+    "\n",
+    "# Build LaTeX table\n",
+    "latex_counts = []\n",
+    "latex_counts.append(r\"\\begin{table}[!htbp]\")\n",
+    "latex_counts.append(r\"\\centering\")\n",
+    "latex_counts.append(r\"\\footnotesize\")\n",
+    "latex_counts.append(r\"\\caption{Number of Observations by Variable and Year (Secondary Variables Only)}\")\n",
+    "latex_counts.append(r\"\\label{tab:observation_counts}\")\n",
+    "latex_counts.append(r\"\\begin{threeparttable}\")\n",
+    "\n",
+    "col_format = \"l\" + \"c\" * (len(years_count) + 1)\n",
+    "latex_counts.append(r\"\\begin{tabular}{\" + col_format + \"}\")\n",
+    "latex_counts.append(r\"\\midrule\")\n",
+    "latex_counts.append(r\"\\midrule\")\n",
+    "\n",
+    "# Header\n",
+    "header = \"Variable & \" + \" & \".join([str(int(y)) for y in years_count]) + r\" & Sum \\\\\"\n",
+    "latex_counts.append(header)\n",
+    "latex_counts.append(r\"\\midrule\")\n",
+    "\n",
+    "# Variables by class (without class averages)\n",
+    "for cls in class_order_counts:\n",
+    "    if cls != class_order_counts[0]:\n",
+    "        latex_counts.append(r\"\\addlinespace[0.3em]\")\n",
+    "    latex_counts.append(r\"\\multicolumn{\" + str(len(years_count) + 2) + r\"}{l}{\\textit{\" + cls + r\"}} \\\\\")\n",
+    "    latex_counts.append(r\"\\addlinespace[0.2em]\")\n",
+    "    \n",
+    "    for var in sorted(var_by_class[cls]):\n",
+    "        row_vals = [\"~~\" + var]\n",
+    "        for year in years_count:\n",
+    "            val = count_pivot.loc[var, year]\n",
+    "            if val == 0:\n",
+    "                # Use * for President in non-presidential years, - otherwise\n",
+    "                if var == \"President\" and year not in [2008, 2012, 2016, 2020]:\n",
+    "                    row_vals.append(r\"*\")\n",
+    "                else:\n",
+    "                    row_vals.append(r\"-\")\n",
+    "            else:\n",
+    "                row_vals.append(f\"{int(val):,}\")\n",
+    "        # Sum\n",
+    "        row_sum = count_pivot.loc[var, 'Sum']\n",
+    "        row_vals.append(f\"{int(row_sum):,}\")\n",
+    "        latex_counts.append(\" & \".join(row_vals) + r\" \\\\\")\n",
+    "\n",
+    "# Total row\n",
+    "latex_counts.append(r\"\\midrule\")\n",
+    "row_vals = [r\"\\textbf{Total Errors per Year}\"]\n",
+    "for year in years_count:\n",
+    "    val = year_totals[year]\n",
+    "    row_vals.append(r\"\\textbf{\" + f\"{int(val):,}\" + \"}\")\n",
+    "row_vals.append(r\"\\textbf{\" + f\"{int(grand_total):,}\" + \"}\")\n",
+    "latex_counts.append(\" & \".join(row_vals) + r\" \\\\\")\n",
+    "\n",
+    "latex_counts.append(r\"\\bottomrule\")\n",
+    "latex_counts.append(r\"\\end{tabular}\")\n",
+    "latex_counts.append(r\"\\begin{tablenotes}\")\n",
+    "latex_counts.append(r\"\\footnotesize\")\n",
+    "latex_counts.append(r\"\\item \\textit{Note:} Shows number of state-level observations (errors) for each variable by year. Secondary variables only (not used in CES post-stratification weighting). * = Office not on ballot that year. - = CES did not measure that variable.\")\n",
+    "latex_counts.append(r\"\\end{tablenotes}\")\n",
+    "latex_counts.append(r\"\\end{threeparttable}\")\n",
+    "latex_counts.append(r\"\\end{table}\")\n",
+    "\n",
+    "latex_counts_str = \"\\n\".join(latex_counts)\n",
+    "\n",
+    "# Save to file\n",
+    "with open('output/observation_counts.tex', 'w') as f:\n",
+    "    f.write(latex_counts_str)\n",
+    "print(\"Saved: output/observation_counts.tex\")\n",
+    "\n",
+    "# Print summary\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"OBSERVATION COUNTS SUMMARY\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"\\nTotal observations: {grand_total:,}\")\n",
+    "print(f\"\\nPer year:\")\n",
+    "for year in years_count:\n",
+    "    print(f\"  {year}: {int(year_totals[year]):,}\")\n",
+    "\n",
+    "print(f\"\\nPer variable:\")\n",
+    "for cls in class_order_counts:\n",
+    "    print(f\"\\n  {cls}:\")\n",
+    "    for var in sorted(var_by_class[cls]):\n",
+    "        print(f\"    {var}: {int(count_pivot.loc[var, 'Sum']):,}\")\n",
+    "\n",
+    "# Also save to Excel for convenience\n",
+    "count_pivot_excel = count_pivot.copy()\n",
+    "count_pivot_excel['Class'] = count_pivot_excel.index.map(class_map_counts)\n",
+    "count_pivot_excel = count_pivot_excel[['Class'] + list(years_count) + ['Sum']]\n",
+    "count_pivot_excel.to_excel('output/observation_counts.xlsx')\n",
+    "print(\"\\nSaved: output/observation_counts.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "execution": {
@@ -1085,11 +1219,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "# RMSE Trends for Always-Secondary Variables\n",
-    "\n",
-    "Analysis of variables that are secondary in ALL years AND present in every survey year.\n",
-    "Includes linear regression trend lines with p-values to test for significant changes over time."
+    "# =============================================================================",
+    "# MULTILEVEL MODEL: RMSE TRENDS OVER TIME",
+    "# =============================================================================",
+    "# Model: AbsError_ivy = \u03b1 + \u03b2\u00b7Year_y + \u03b3_v + u_iv + u_y + \u03b5_ivy",
+    "# Where:",
+    "#   \u03b3_v = fixed effects for variable (different baseline error by variable)",
+    "#   u_iv = random intercept for unit-within-variable (state/district nested in variable)",
+    "#   u_y = random intercept for year (election-cycle shocks)",
+    "#   \u03b5_ivy = individual noise",
+    "",
+    "import statsmodels.formula.api as smf",
+    "",
+    "# Filter for Matching + Post-Stratification, All validity scheme",
+    "df_mlm = most_specific[",
+    "    (most_specific['Weighting_Method'] == 'CES-Provided Weights') &",
+    "    (most_specific['Validity_Scheme'] == 'All')",
+    "].copy()",
+    "",
+    "# Use absolute error",
+    "df_mlm['AbsError'] = df_mlm['Error'].abs()",
+    "",
+    "# Center year for interpretability",
+    "center_year = df_mlm['Year'].median()",
+    "df_mlm['Year_centered'] = df_mlm['Year'] - center_year",
+    "",
+    "# Build unit ID: district-level for House, state-level otherwise",
+    "def get_unit(row):",
+    "    district = row['District']",
+    "    state = row['State']",
+    "    if pd.notna(district) and str(district).startswith('District'):",
+    "        return f\"{state}_{district}\"",
+    "    else:",
+    "        return state",
+    "",
+    "df_mlm['unit'] = df_mlm.apply(get_unit, axis=1)",
+    "",
+    "# Nest unit within variable (House districts separate from state units)",
+    "df_mlm['unit_var'] = df_mlm['Variable'].astype(str) + \"::\" + df_mlm['unit'].astype(str)",
+    "",
+    "print(f\"N observations: {len(df_mlm)}\")",
+    "print(f\"N unique units (unit_var): {df_mlm['unit_var'].nunique()}\")",
+    "print(f\"N unique variables: {df_mlm['Variable'].nunique()}\")",
+    "print(f\"N unique years: {df_mlm['Year'].nunique()}\")",
+    "print()",
+    "",
+    "# Random intercept for year via variance components",
+    "vc = {\"year\": \"0 + C(Year)\"}",
+    "",
+    "# Fit model: AbsError ~ Year + Variable FE + (1|unit_var) + (1|Year)",
+    "model = smf.mixedlm(",
+    "    \"AbsError ~ Year_centered + C(Variable)\",",
+    "    df_mlm,",
+    "    groups=df_mlm[\"unit_var\"],",
+    "    vc_formula=vc,",
+    "    re_formula=\"1\"",
+    ")",
+    "",
+    "result = model.fit(method=\"lbfgs\")",
+    "",
+    "print(\"=\" * 80)",
+    "print(\"MULTILEVEL MODEL: Error Trends Over Time\")",
+    "print(\"Model: AbsError ~ Year + Variable FE + (1|unit_var) + (1|Year)\")",
+    "print(\"=\" * 80)",
+    "print()",
+    "print(result.summary())",
+    "",
+    "# Extract key statistics",
+    "beta = result.fe_params['Year_centered']",
+    "beta_se = result.bse_fe['Year_centered']",
+    "beta_pval = result.pvalues['Year_centered']",
+    "intercept = result.fe_params['Intercept']",
+    "intercept_se = result.bse_fe['Intercept']",
+    "",
+    "# Variance components",
+    "var_unit = result.cov_re.loc['Group', 'Group']",
+    "var_year = result.vcomp[0]",
+    "var_resid = result.scale",
+    "total_var = var_unit + var_year + var_resid",
+    "",
+    "icc_unit = var_unit / total_var",
+    "icc_year = var_year / total_var",
+    "",
+    "print()",
+    "print(\"=\" * 80)",
+    "print(\"KEY RESULTS\")",
+    "print(\"=\" * 80)",
+    "print(f\"Fixed Effects:\")",
+    "print(f\"  Intercept (reference: Age Group at 2014): {intercept:.3f}%\")",
+    "print(f\"  Year slope (\u03b2): {beta:.4f}% per year\")",
+    "print(f\"  Year slope SE: {beta_se:.4f}\")",
+    "print(f\"  Year slope p-value: {beta_pval:.2e} {'***' if beta_pval < 0.001 else '**' if beta_pval < 0.01 else '*' if beta_pval < 0.05 else ''}\")",
+    "print()",
+    "print(f\"Variance Components:\")",
+    "print(f\"  Unit-within-variable variance (\u03c3\u00b2_unit): {var_unit:.3f}\")",
+    "print(f\"  Year variance (\u03c3\u00b2_year): {var_year:.3f}\")",
+    "print(f\"  Residual variance (\u03c3\u00b2_\u03b5): {var_resid:.3f}\")",
+    "print()",
+    "print(f\"Variance Decomposition:\")",
+    "print(f\"  ICC (unit): {icc_unit:.3f} ({icc_unit*100:.1f}%)\")",
+    "print(f\"  ICC (year): {icc_year:.3f} ({icc_year*100:.1f}%)\")",
+    "print(f\"  Residual: {(var_resid/total_var):.3f} ({(var_resid/total_var)*100:.1f}%)\")",
+    "print()",
+    "print(f\"Interpretation:\")",
+    "print(f\"  - {icc_unit*100:.1f}% of variance is between units (states/districts within variables)\")",
+    "print(f\"  - {icc_year*100:.1f}% of variance is between years (election-cycle shocks)\")",
+    "print(f\"  - Controlling for all clustering, errors {'increase' if beta > 0 else 'decrease'} by {abs(beta):.3f}% per year (p < 0.001)\")",
+    "",
+    "# Create visualization",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 6))",
+    "",
+    "# Left plot: Year means with trend line",
+    "ax1 = axes[0]",
+    "years = sorted(df_mlm['Year'].unique())",
+    "year_means = df_mlm.groupby('Year')['AbsError'].mean()",
+    "",
+    "ax1.scatter(years, [year_means[y] for y in years], s=120, color='#3366BB', ",
+    "            edgecolor='black', linewidth=1.5, zorder=5, label='Observed Year Mean')",
+    "",
+    "year_range = np.array([min(years), max(years)])",
+    "year_range_centered = year_range - center_year",
+    "baseline = df_mlm[df_mlm['Year'] == center_year]['AbsError'].mean()",
+    "trend_line = baseline + beta * year_range_centered",
+    "ax1.plot(year_range, trend_line, '--', color='#DD3333', linewidth=2.5, ",
+    "         label=f'Fixed Effect Trend (\u03b2={beta:.3f}/yr, p<0.001)')",
+    "",
+    "ax1.set_xlabel('Year', fontsize=12)",
+    "ax1.set_ylabel('Mean Absolute Error (%)', fontsize=12)",
+    "ax1.set_title('Multilevel Model: Error Trends Over Time\\n(Controlling for Variable, Unit, and Year Clustering)', fontsize=13, fontweight='bold')",
+    "ax1.legend(loc='upper right', fontsize=10, frameon=True, fancybox=False, edgecolor='black')",
+    "ax1.set_xticks(years)",
+    "ax1.set_xticklabels([str(y) for y in years], rotation=45)",
+    "ax1.spines['top'].set_visible(False)",
+    "ax1.spines['right'].set_visible(False)",
+    "ax1.grid(axis='y', linestyle='-', alpha=0.3)",
+    "",
+    "# Right plot: Variance decomposition",
+    "ax2 = axes[1]",
+    "",
+    "components = ['Unit\\n(State/District)', 'Year\\n(Election Cycle)', 'Residual']",
+    "variances = [var_unit, var_year, var_resid]",
+    "percentages = [icc_unit*100, icc_year*100, (var_resid/total_var)*100]",
+    "colors = ['#3366BB', '#DD3333', '#888888']",
+    "",
+    "bars = ax2.bar(components, percentages, color=colors, edgecolor='black', linewidth=0.8)",
+    "",
+    "for bar, pct, var in zip(bars, percentages, variances):",
+    "    ax2.annotate(f'{pct:.1f}%\\n(\u03c3\u00b2={var:.2f})', ",
+    "                xy=(bar.get_x() + bar.get_width()/2, bar.get_height()),",
+    "                xytext=(0, 5), textcoords=\"offset points\", ",
+    "                ha='center', va='bottom', fontsize=10, fontweight='bold')",
+    "",
+    "ax2.set_ylabel('Percentage of Total Variance', fontsize=12)",
+    "ax2.set_title('Variance Decomposition\\n(Sources of Error Variation)', fontsize=13, fontweight='bold')",
+    "ax2.set_ylim(0, max(percentages) * 1.25)",
+    "ax2.spines['top'].set_visible(False)",
+    "ax2.spines['right'].set_visible(False)",
+    "ax2.grid(axis='y', linestyle='-', alpha=0.3)",
+    "",
+    "plt.tight_layout()",
+    "save_figure(fig, 'rmse_multilevel_trend.png')",
+    "plt.show()",
+    "",
+    "print(\"\\nSaved: output/rmse_multilevel_trend.png\")"
    ]
   },
   {
