--- a/tables_and_figures/output/rmse_multilevel_trend.tex
+++ b/tables_and_figures/output/rmse_multilevel_trend.tex
@@ -9,19 +9,25 @@
 Parameter & Estimate & SE & p-value \\
 \midrule
 \multicolumn{4}{l}{\textit{Fixed Effects}} \\
-\quad Intercept (at 2014) & 8.135 & 0.153 & <0.001* \\
-\quad Year ($\beta$) & -0.090 & 0.030 & 0.003* \\
+\quad Intercept (at 2014) & 3.275 & 0.404 & <0.001* \\
+\quad Year ($\beta$) & -0.0611 & 0.0108 & <0.001* \\
 \midrule
 \multicolumn{4}{l}{\textit{Variance Components}} \\
-\quad Between-year ($\sigma^2_u$) & 0.097 & - & - \\
-\quad Within-year ($\sigma^2_\varepsilon$) & 128.76 & - & - \\
-\quad ICC & 0.001 & - & - \\
+\quad Unit-within-variable ($\sigma^2_{unit}$) & 5.208 & - & - \\
+\quad Year ($\sigma^2_{year}$) & 16.092 & - & - \\
+\quad Residual ($\sigma^2_\varepsilon$) & 12.054 & - & - \\
+\midrule
+\multicolumn{4}{l}{\textit{Variance Decomposition}} \\
+\quad ICC (unit) & 0.156 & - & - \\
+\quad ICC (year) & 0.482 & - & - \\
+\quad Residual & 0.361 & - & - \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} Multilevel model with random intercepts by year. N = 10,437 observations across 9 years.
-\item * indicates p < 0.05
+\item \textit{Note:} Multilevel model: AbsError $\sim$ Year + Variable FE + (1|unit\_var) + (1|Year).
+\item N = 10,437 observations; 1,470 unit-variable combinations; 21 variables; 9 years.
+\item Variable fixed effects included but not shown. * indicates p < 0.05.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
