Fix trend line baseline to use actual mean at center year

--- a/tables_and_figures/output/rmse_trend_regression_by_variable.tex
+++ b/tables_and_figures/output/rmse_trend_regression_by_variable.tex
@@ -1,26 +1,26 @@
 \begin{table}[!htbp]
 \centering
 \footnotesize
-\caption{RMSE Trend Regression by Variable}
+\caption{RMSE Trend Regression by Variable (Winsorized 95/5)}
 \label{tab:rmse_trend_regression_by_variable}
 \begin{threeparttable}
-\begin{tabular}{lccccc}
+\begin{tabular}{lcc}
 \toprule
- & Variable & Class & Slope & R\_squared & p\_value \\
+Variable & Slope & p-value \\
 \midrule
-6 & Veteran Status & Demographic & -0.14 & 0.80 & 0.00 \\
-1 & Family Income & Demographic & 0.26 & 0.69 & 0.01 \\
-2 & State Representative & Candidate Choice & 0.25 & 0.48 & 0.04 \\
-7 & Voting Method & Voting Administration & 0.13 & 0.38 & 0.07 \\
-0 & Employment Status & Demographic & 0.17 & 0.25 & 0.17 \\
-5 & Union Membership & Demographic & 0.07 & 0.21 & 0.21 \\
-4 & U.S. House & Candidate Choice & 0.10 & 0.10 & 0.40 \\
-3 & State Senator & Candidate Choice & -0.09 & 0.04 & 0.62 \\
+Veteran Status$^{**}$ & -0.135 & 0.001 \\
+Family Income$^{*}$ & 0.258 & 0.019 \\
+Voting Method$^{*}$ & 0.137 & 0.045 \\
+State Representative & 0.112 & 0.123 \\
+Employment Status & 0.215 & 0.149 \\
+Union Membership & 0.084 & 0.149 \\
+U.S. House & 0.093 & 0.399 \\
+State Senator & -0.020 & 0.854 \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} Linear regression of RMSE over time for always-secondary variables. * p<0.05, ** p<0.01, *** p<0.001.
+\item \textit{Note:} Linear regression of winsorized RMSE (95/5) over time for always-secondary variables. * p<0.05, ** p<0.01, *** p<0.001.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
