--- a/tables_and_figures/output/winsor_sensitivity.tex
+++ b/tables_and_figures/output/winsor_sensitivity.tex
@@ -6,31 +6,31 @@
 \begin{threeparttable}
 \begin{tabular}{llcccccc}
 \toprule
-Class & Winsorization & Slope & SE & p-value & Sig. & $R^2$ & Mean Error \\
+Class & Winsorization & Slope & SE & p-value & Sig. & $R^2$ & Mean Error \
 \midrule
-Candidate Choice & None & 0.0255 & 0.0219 & 0.2432 & No & 0.0004 & 6.99 \\
- & 1\% & 0.0244 & 0.0207 & 0.2391 & No & 0.0004 & 6.92 \\
- & 2.5\% & 0.0254 & 0.0199 & 0.2028 & No & 0.0004 & 6.85 \\
- & 5\% & 0.0264 & 0.0187 & 0.1565 & No & 0.0005 & 6.72 \\
- & 10\% & 0.0248 & 0.0167 & 0.1362 & No & 0.0006 & 6.52 \\
+Candidate Choice & None & 0.0255 & 0.0219 & 0.2432 & No & 0.0004 & 6.99 \
+ & 1\% & 0.0244 & 0.0207 & 0.2391 & No & 0.0004 & 6.92 \
+ & 2.5\% & 0.0254 & 0.0199 & 0.2028 & No & 0.0004 & 6.85 \
+ & 5\% & 0.0264 & 0.0187 & 0.1565 & No & 0.0005 & 6.72 \
+ & 10\% & 0.0248 & 0.0167 & 0.1362 & No & 0.0006 & 6.52 \
 \midrule
-Demographic & None & 0.0860 & 0.0205 & 0.0000* & Yes & 0.0095 & 5.39 \\
- & 1\% & 0.0858 & 0.0203 & 0.0000* & Yes & 0.0096 & 5.38 \\
- & 2.5\% & 0.0852 & 0.0200 & 0.0000* & Yes & 0.0098 & 5.35 \\
- & 5\% & 0.0792 & 0.0194 & 0.0000* & Yes & 0.0090 & 5.30 \\
- & 10\% & 0.0641 & 0.0183 & 0.0005* & Yes & 0.0067 & 5.18 \\
+Demographic & None & 0.0860 & 0.0205 & 0.0000* & Yes & 0.0095 & 5.39 \
+ & 1\% & 0.0858 & 0.0203 & 0.0000* & Yes & 0.0096 & 5.38 \
+ & 2.5\% & 0.0852 & 0.0200 & 0.0000* & Yes & 0.0098 & 5.35 \
+ & 5\% & 0.0792 & 0.0194 & 0.0000* & Yes & 0.0090 & 5.30 \
+ & 10\% & 0.0641 & 0.0183 & 0.0005* & Yes & 0.0067 & 5.18 \
 \midrule
-Voting Administration & None & 0.1263 & 0.0302 & 0.0000* & Yes & 0.0370 & 3.84 \\
- & 1\% & 0.1260 & 0.0293 & 0.0000* & Yes & 0.0390 & 3.81 \\
- & 2.5\% & 0.1247 & 0.0283 & 0.0000* & Yes & 0.0408 & 3.78 \\
- & 5\% & 0.1210 & 0.0267 & 0.0000* & Yes & 0.0431 & 3.72 \\
- & 10\% & 0.1085 & 0.0226 & 0.0000* & Yes & 0.0483 & 3.53 \\
+Voting Administration & None & 0.1263 & 0.0302 & 0.0000* & Yes & 0.0370 & 3.84 \
+ & 1\% & 0.1260 & 0.0293 & 0.0000* & Yes & 0.0390 & 3.81 \
+ & 2.5\% & 0.1247 & 0.0283 & 0.0000* & Yes & 0.0408 & 3.78 \
+ & 5\% & 0.1210 & 0.0267 & 0.0000* & Yes & 0.0431 & 3.72 \
+ & 10\% & 0.1085 & 0.0226 & 0.0000* & Yes & 0.0483 & 3.53 \
 \midrule
-Overall & None & 0.0861 & 0.0147 & 0.0000* & Yes & 0.0057 & 6.26 \\
- & 1\% & 0.0845 & 0.0141 & 0.0000* & Yes & 0.0060 & 6.21 \\
- & 2.5\% & 0.0841 & 0.0136 & 0.0000* & Yes & 0.0063 & 6.15 \\
- & 5\% & 0.0810 & 0.0129 & 0.0000* & Yes & 0.0066 & 6.06 \\
- & 10\% & 0.0725 & 0.0117 & 0.0000* & Yes & 0.0064 & 5.88 \\
+Overall & None & 0.0861 & 0.0147 & 0.0000* & Yes & 0.0057 & 6.26 \
+ & 1\% & 0.0845 & 0.0141 & 0.0000* & Yes & 0.0060 & 6.21 \
+ & 2.5\% & 0.0841 & 0.0136 & 0.0000* & Yes & 0.0063 & 6.15 \
+ & 5\% & 0.0810 & 0.0129 & 0.0000* & Yes & 0.0066 & 6.06 \
+ & 10\% & 0.0725 & 0.0117 & 0.0000* & Yes & 0.0064 & 5.88 \
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
