--- a/tables_and_figures/output/rmse_trend_primary_analysis_unweighted.tex
+++ b/tables_and_figures/output/rmse_trend_primary_analysis_unweighted.tex
@@ -8,18 +8,13 @@
 \toprule
 Method & $\beta$ (RMSE/year) & SE & p-value \\
 \midrule
-\multicolumn{4}{l}{\textit{Primary Analysis (Year $\times$ Variable Aggregated)}} \\
-\quad OLS + HC3 Robust SEs & 0.148 & 0.057 & 0.010* \\
-\quad Permutation Test (n=10,000) & 0.148 & - & 0.013* \\
-\midrule
-\multicolumn{4}{l}{\textit{Robustness Check}} \\
-\quad Individual-level + Year-clustered SEs & 3.07$^\dagger$ & 0.76 & 0.000 \\
+OLS + HC3 Robust SEs & 0.148 & 0.057 & 0.010* \\
+Permutation Test (n=10,000) & 0.148 & - & 0.013* \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} Analysis restricted to 8 secondary variables present in all 9 years. Unweighted (matching only).
-\item $^\dagger$ Coefficient is in squared error units.
+\item \textit{Note:} RMSE aggregated to year $\times$ variable level (N=72: 8 secondary variables $\times$ 9 years), then regressed on year with variable fixed effects.
 \item * indicates p < 0.05. 95\% CI: [0.036, 0.261].
 \end{tablenotes}
 \end{threeparttable}
